--- a/website/docs/cdktf/api-reference/python.mdx
+++ b/website/docs/cdktf/api-reference/python.mdx
@@ -27496,6 +27496,8 @@ The list of aspects which were directly applied on this scope.
 
 ### AssertionReturn <a name="AssertionReturn" id="cdktf.testingMatchers.AssertionReturn"></a>
 
+Class representing the contents of a return by an assertion.
+
 #### Initializers <a name="Initializers" id="cdktf.testingMatchers.AssertionReturn.Initializer"></a>
 
 ```python
@@ -27507,10 +27509,10 @@ testingMatchers.AssertionReturn(
 )
 ```
 
-| **Name**                                                                                                | **Type**          | **Description**   |
-| ------------------------------------------------------------------------------------------------------- | ----------------- | ----------------- |
-| <code><a href="#cdktf.testingMatchers.AssertionReturn.Initializer.parameter.message">message</a></code> | <code>str</code>  | _No description._ |
-| <code><a href="#cdktf.testingMatchers.AssertionReturn.Initializer.parameter.pass">pass</a></code>       | <code>bool</code> | _No description._ |
+| **Name**                                                                                                | **Type**          | **Description**                                                            |
+| ------------------------------------------------------------------------------------------------------- | ----------------- | -------------------------------------------------------------------------- |
+| <code><a href="#cdktf.testingMatchers.AssertionReturn.Initializer.parameter.message">message</a></code> | <code>str</code>  | - String message containing information about the result of the assertion. |
+| <code><a href="#cdktf.testingMatchers.AssertionReturn.Initializer.parameter.pass">pass</a></code>       | <code>bool</code> | - Boolean pass denoting the success of the assertion.                      |
 
 ---
 
@@ -27518,20 +27520,24 @@ testingMatchers.AssertionReturn(
 
 - _Type:_ str
 
+String message containing information about the result of the assertion.
+
 ---
 
 ##### `pass`<sup>Required</sup> <a name="pass" id="cdktf.testingMatchers.AssertionReturn.Initializer.parameter.pass"></a>
 
 - _Type:_ bool
 
+Boolean pass denoting the success of the assertion.
+
 ---
 
 #### Properties <a name="Properties" id="Properties"></a>
 
-| **Name**                                                                                   | **Type**          | **Description**   |
-| ------------------------------------------------------------------------------------------ | ----------------- | ----------------- |
-| <code><a href="#cdktf.testingMatchers.AssertionReturn.property.message">message</a></code> | <code>str</code>  | _No description._ |
-| <code><a href="#cdktf.testingMatchers.AssertionReturn.property.pass">pass</a></code>       | <code>bool</code> | _No description._ |
+| **Name**                                                                                   | **Type**          | **Description**                                                            |
+| ------------------------------------------------------------------------------------------ | ----------------- | -------------------------------------------------------------------------- |
+| <code><a href="#cdktf.testingMatchers.AssertionReturn.property.message">message</a></code> | <code>str</code>  | - String message containing information about the result of the assertion. |
+| <code><a href="#cdktf.testingMatchers.AssertionReturn.property.pass">pass</a></code>       | <code>bool</code> | - Boolean pass denoting the success of the assertion.                      |
 
 ---
 
@@ -27543,6 +27549,8 @@ message: str
 
 - _Type:_ str
 
+String message containing information about the result of the assertion.
+
 ---
 
 ##### `pass`<sup>Required</sup> <a name="pass" id="cdktf.testingMatchers.AssertionReturn.property.pass"></a>
@@ -27552,6 +27560,8 @@ pass: bool
 ```
 
 - _Type:_ bool
+
+Boolean pass denoting the success of the assertion.
 
 ---
 
@@ -33894,6 +33904,8 @@ cdktf.Testing()
 | <code><a href="#cdktf.Testing.toBeValidTerraform">to_be_valid_terraform</a></code>                           | _No description._                                                                           |
 | <code><a href="#cdktf.Testing.toHaveDataSource">to_have_data_source</a></code>                               | _No description._                                                                           |
 | <code><a href="#cdktf.Testing.toHaveDataSourceWithProperties">to_have_data_source_with_properties</a></code> | _No description._                                                                           |
+| <code><a href="#cdktf.Testing.toHaveProvider">to_have_provider</a></code>                                    | _No description._                                                                           |
+| <code><a href="#cdktf.Testing.toHaveProviderWithProperties">to_have_provider_with_properties</a></code>      | _No description._                                                                           |
 | <code><a href="#cdktf.Testing.toHaveResource">to_have_resource</a></code>                                    | _No description._                                                                           |
 | <code><a href="#cdktf.Testing.toHaveResourceWithProperties">to_have_resource_with_properties</a></code>      | _No description._                                                                           |
 
@@ -34138,6 +34150,59 @@ cdktf.Testing.to_have_data_source_with_properties(
 ---
 
 ###### `properties`<sup>Optional</sup> <a name="properties" id="cdktf.Testing.toHaveDataSourceWithProperties.parameter.properties"></a>
+
+- _Type:_ typing.Mapping[typing.Any]
+
+---
+
+##### `to_have_provider` <a name="to_have_provider" id="cdktf.Testing.toHaveProvider"></a>
+
+```python
+import cdktf
+
+cdktf.Testing.to_have_provider(
+  received: str,
+  resource_type: str
+)
+```
+
+###### `received`<sup>Required</sup> <a name="received" id="cdktf.Testing.toHaveProvider.parameter.received"></a>
+
+- _Type:_ str
+
+---
+
+###### `resource_type`<sup>Required</sup> <a name="resource_type" id="cdktf.Testing.toHaveProvider.parameter.resourceType"></a>
+
+- _Type:_ str
+
+---
+
+##### `to_have_provider_with_properties` <a name="to_have_provider_with_properties" id="cdktf.Testing.toHaveProviderWithProperties"></a>
+
+```python
+import cdktf
+
+cdktf.Testing.to_have_provider_with_properties(
+  received: str,
+  resource_type: str,
+  properties: typing.Mapping[typing.Any] = None
+)
+```
+
+###### `received`<sup>Required</sup> <a name="received" id="cdktf.Testing.toHaveProviderWithProperties.parameter.received"></a>
+
+- _Type:_ str
+
+---
+
+###### `resource_type`<sup>Required</sup> <a name="resource_type" id="cdktf.Testing.toHaveProviderWithProperties.parameter.resourceType"></a>
+
+- _Type:_ str
+
+---
+
+###### `properties`<sup>Optional</sup> <a name="properties" id="cdktf.Testing.toHaveProviderWithProperties.parameter.properties"></a>
 
 - _Type:_ typing.Mapping[typing.Any]
 
@@ -35725,6 +35790,7 @@ Resolve an inner object.
 | ------------------------------------------------------------------------------------------- | ---------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | <code><a href="#cdktf.IResolveContext.property.preparing">preparing</a></code>              | <code>bool</code>                  | True when we are still preparing, false if we're rendering the final output.                                                                                                                                                       |
 | <code><a href="#cdktf.IResolveContext.property.scope">scope</a></code>                      | <code>constructs.IConstruct</code> | The scope from which resolution has been initiated.                                                                                                                                                                                |
+| <code><a href="#cdktf.IResolveContext.property.ignoreEscapes">ignore_escapes</a></code>     | <code>bool</code>                  | True when ${} should not be parsed, and treated as literals.                                                                                                                                                                       |
 | <code><a href="#cdktf.IResolveContext.property.iteratorContext">iterator_context</a></code> | <code>str</code>                   | TerraformIterators can be passed for block attributes and normal list attributes both require different handling when the iterable variable is accessed e.g. a dynamic block needs each.key while a for expression just needs key. |
 | <code><a href="#cdktf.IResolveContext.property.suppressBraces">suppress_braces</a></code>   | <code>bool</code>                  | True when ${} should be ommitted (because already inside them), false otherwise.                                                                                                                                                   |
 
@@ -35751,6 +35817,18 @@ scope: IConstruct
 - _Type:_ constructs.IConstruct
 
 The scope from which resolution has been initiated.
+
+---
+
+##### `ignore_escapes`<sup>Optional</sup> <a name="ignore_escapes" id="cdktf.IResolveContext.property.ignoreEscapes"></a>
+
+```python
+ignore_escapes: bool
+```
+
+- _Type:_ bool
+
+True when ${} should not be parsed, and treated as literals.
 
 ---
 
