--- a/website/docs/cdktf/api-reference/go.mdx
+++ b/website/docs/cdktf/api-reference/go.mdx
@@ -22454,6 +22454,8 @@ The list of aspects which were directly applied on this scope.
 
 ### AssertionReturn <a name="AssertionReturn" id="cdktf.testingMatchers.AssertionReturn"></a>
 
+Class representing the contents of a return by an assertion.
+
 #### Initializers <a name="Initializers" id="cdktf.testingMatchers.AssertionReturn.Initializer"></a>
 
 ```go
@@ -22462,10 +22464,10 @@ import "github.com/hashicorp/terraform-cdk-go/cdktf/testingmatchers"
 testingmatchers.NewAssertionReturn(message *string, pass *bool) AssertionReturn
 ```
 
-| **Name**                                                                                                | **Type**              | **Description**   |
-| ------------------------------------------------------------------------------------------------------- | --------------------- | ----------------- |
-| <code><a href="#cdktf.testingMatchers.AssertionReturn.Initializer.parameter.message">message</a></code> | <code>\*string</code> | _No description._ |
-| <code><a href="#cdktf.testingMatchers.AssertionReturn.Initializer.parameter.pass">pass</a></code>       | <code>\*bool</code>   | _No description._ |
+| **Name**                                                                                                | **Type**              | **Description**                                                            |
+| ------------------------------------------------------------------------------------------------------- | --------------------- | -------------------------------------------------------------------------- |
+| <code><a href="#cdktf.testingMatchers.AssertionReturn.Initializer.parameter.message">message</a></code> | <code>\*string</code> | - String message containing information about the result of the assertion. |
+| <code><a href="#cdktf.testingMatchers.AssertionReturn.Initializer.parameter.pass">pass</a></code>       | <code>\*bool</code>   | - Boolean pass denoting the success of the assertion.                      |
 
 ---
 
@@ -22473,20 +22475,24 @@ testingmatchers.NewAssertionReturn(message *string, pass *bool) AssertionReturn
 
 - _Type:_ \*string
 
+String message containing information about the result of the assertion.
+
 ---
 
 ##### `pass`<sup>Required</sup> <a name="pass" id="cdktf.testingMatchers.AssertionReturn.Initializer.parameter.pass"></a>
 
 - _Type:_ \*bool
 
+Boolean pass denoting the success of the assertion.
+
 ---
 
 #### Properties <a name="Properties" id="Properties"></a>
 
-| **Name**                                                                                   | **Type**              | **Description**   |
-| ------------------------------------------------------------------------------------------ | --------------------- | ----------------- |
-| <code><a href="#cdktf.testingMatchers.AssertionReturn.property.message">Message</a></code> | <code>\*string</code> | _No description._ |
-| <code><a href="#cdktf.testingMatchers.AssertionReturn.property.pass">Pass</a></code>       | <code>\*bool</code>   | _No description._ |
+| **Name**                                                                                   | **Type**              | **Description**                                                            |
+| ------------------------------------------------------------------------------------------ | --------------------- | -------------------------------------------------------------------------- |
+| <code><a href="#cdktf.testingMatchers.AssertionReturn.property.message">Message</a></code> | <code>\*string</code> | - String message containing information about the result of the assertion. |
+| <code><a href="#cdktf.testingMatchers.AssertionReturn.property.pass">Pass</a></code>       | <code>\*bool</code>   | - Boolean pass denoting the success of the assertion.                      |
 
 ---
 
@@ -22498,6 +22504,8 @@ func Message() *string
 
 - _Type:_ \*string
 
+String message containing information about the result of the assertion.
+
 ---
 
 ##### `Pass`<sup>Required</sup> <a name="Pass" id="cdktf.testingMatchers.AssertionReturn.property.pass"></a>
@@ -22507,6 +22515,8 @@ func Pass() *bool
 ```
 
 - _Type:_ \*bool
+
+Boolean pass denoting the success of the assertion.
 
 ---
 
@@ -28260,6 +28270,8 @@ cdktf.NewTesting() Testing
 | <code><a href="#cdktf.Testing.toBeValidTerraform">ToBeValidTerraform</a></code>                         | _No description._                                                                           |
 | <code><a href="#cdktf.Testing.toHaveDataSource">ToHaveDataSource</a></code>                             | _No description._                                                                           |
 | <code><a href="#cdktf.Testing.toHaveDataSourceWithProperties">ToHaveDataSourceWithProperties</a></code> | _No description._                                                                           |
+| <code><a href="#cdktf.Testing.toHaveProvider">ToHaveProvider</a></code>                                 | _No description._                                                                           |
+| <code><a href="#cdktf.Testing.toHaveProviderWithProperties">ToHaveProviderWithProperties</a></code>     | _No description._                                                                           |
 | <code><a href="#cdktf.Testing.toHaveResource">ToHaveResource</a></code>                                 | _No description._                                                                           |
 | <code><a href="#cdktf.Testing.toHaveResourceWithProperties">ToHaveResourceWithProperties</a></code>     | _No description._                                                                           |
 
@@ -28450,6 +28462,52 @@ cdktf.Testing_ToHaveDataSourceWithProperties(received *string, resourceType *str
 ---
 
 ###### `properties`<sup>Optional</sup> <a name="properties" id="cdktf.Testing.toHaveDataSourceWithProperties.parameter.properties"></a>
+
+- _Type:_ \*map[string]interface{}
+
+---
+
+##### `ToHaveProvider` <a name="ToHaveProvider" id="cdktf.Testing.toHaveProvider"></a>
+
+```go
+import "github.com/hashicorp/terraform-cdk-go/cdktf"
+
+cdktf.Testing_ToHaveProvider(received *string, resourceType *string) *bool
+```
+
+###### `received`<sup>Required</sup> <a name="received" id="cdktf.Testing.toHaveProvider.parameter.received"></a>
+
+- _Type:_ \*string
+
+---
+
+###### `resourceType`<sup>Required</sup> <a name="resourceType" id="cdktf.Testing.toHaveProvider.parameter.resourceType"></a>
+
+- _Type:_ \*string
+
+---
+
+##### `ToHaveProviderWithProperties` <a name="ToHaveProviderWithProperties" id="cdktf.Testing.toHaveProviderWithProperties"></a>
+
+```go
+import "github.com/hashicorp/terraform-cdk-go/cdktf"
+
+cdktf.Testing_ToHaveProviderWithProperties(received *string, resourceType *string, properties *map[string]interface{}) *bool
+```
+
+###### `received`<sup>Required</sup> <a name="received" id="cdktf.Testing.toHaveProviderWithProperties.parameter.received"></a>
+
+- _Type:_ \*string
+
+---
+
+###### `resourceType`<sup>Required</sup> <a name="resourceType" id="cdktf.Testing.toHaveProviderWithProperties.parameter.resourceType"></a>
+
+- _Type:_ \*string
+
+---
+
+###### `properties`<sup>Optional</sup> <a name="properties" id="cdktf.Testing.toHaveProviderWithProperties.parameter.properties"></a>
 
 - _Type:_ \*map[string]interface{}
 
@@ -29897,6 +29955,7 @@ Resolve an inner object.
 | ------------------------------------------------------------------------------------------ | ------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | <code><a href="#cdktf.IResolveContext.property.preparing">Preparing</a></code>             | <code>\*bool</code>                                                 | True when we are still preparing, false if we're rendering the final output.                                                                                                                                                       |
 | <code><a href="#cdktf.IResolveContext.property.scope">Scope</a></code>                     | <code>github.com/aws/constructs-go/constructs/v10.IConstruct</code> | The scope from which resolution has been initiated.                                                                                                                                                                                |
+| <code><a href="#cdktf.IResolveContext.property.ignoreEscapes">IgnoreEscapes</a></code>     | <code>\*bool</code>                                                 | True when ${} should not be parsed, and treated as literals.                                                                                                                                                                       |
 | <code><a href="#cdktf.IResolveContext.property.iteratorContext">IteratorContext</a></code> | <code>\*string</code>                                               | TerraformIterators can be passed for block attributes and normal list attributes both require different handling when the iterable variable is accessed e.g. a dynamic block needs each.key while a for expression just needs key. |
 | <code><a href="#cdktf.IResolveContext.property.suppressBraces">SuppressBraces</a></code>   | <code>\*bool</code>                                                 | True when ${} should be ommitted (because already inside them), false otherwise.                                                                                                                                                   |
 
@@ -29923,6 +29982,18 @@ func Scope() IConstruct
 - _Type:_ github.com/aws/constructs-go/constructs/v10.IConstruct
 
 The scope from which resolution has been initiated.
+
+---
+
+##### `IgnoreEscapes`<sup>Optional</sup> <a name="IgnoreEscapes" id="cdktf.IResolveContext.property.ignoreEscapes"></a>
+
+```go
+func IgnoreEscapes() *bool
+```
+
+- _Type:_ \*bool
+
+True when ${} should not be parsed, and treated as literals.
 
 ---
 
