--- a/website/docs/cdktf/api-reference/java.mdx
+++ b/website/docs/cdktf/api-reference/java.mdx
@@ -26653,6 +26653,8 @@ The list of aspects which were directly applied on this scope.
 
 ### AssertionReturn <a name="AssertionReturn" id="cdktf.testingMatchers.AssertionReturn"></a>
 
+Class representing the contents of a return by an assertion.
+
 #### Initializers <a name="Initializers" id="cdktf.testingMatchers.AssertionReturn.Initializer"></a>
 
 ```java
@@ -26661,10 +26663,10 @@ import com.hashicorp.cdktf.testing_matchers.AssertionReturn;
 new AssertionReturn(java.lang.String message, java.lang.Boolean pass);
 ```
 
-| **Name**                                                                                                | **Type**                       | **Description**   |
-| ------------------------------------------------------------------------------------------------------- | ------------------------------ | ----------------- |
-| <code><a href="#cdktf.testingMatchers.AssertionReturn.Initializer.parameter.message">message</a></code> | <code>java.lang.String</code>  | _No description._ |
-| <code><a href="#cdktf.testingMatchers.AssertionReturn.Initializer.parameter.pass">pass</a></code>       | <code>java.lang.Boolean</code> | _No description._ |
+| **Name**                                                                                                | **Type**                       | **Description**                                                            |
+| ------------------------------------------------------------------------------------------------------- | ------------------------------ | -------------------------------------------------------------------------- |
+| <code><a href="#cdktf.testingMatchers.AssertionReturn.Initializer.parameter.message">message</a></code> | <code>java.lang.String</code>  | - String message containing information about the result of the assertion. |
+| <code><a href="#cdktf.testingMatchers.AssertionReturn.Initializer.parameter.pass">pass</a></code>       | <code>java.lang.Boolean</code> | - Boolean pass denoting the success of the assertion.                      |
 
 ---
 
@@ -26672,20 +26674,24 @@ new AssertionReturn(java.lang.String message, java.lang.Boolean pass);
 
 - _Type:_ java.lang.String
 
+String message containing information about the result of the assertion.
+
 ---
 
 ##### `pass`<sup>Required</sup> <a name="pass" id="cdktf.testingMatchers.AssertionReturn.Initializer.parameter.pass"></a>
 
 - _Type:_ java.lang.Boolean
 
+Boolean pass denoting the success of the assertion.
+
 ---
 
 #### Properties <a name="Properties" id="Properties"></a>
 
-| **Name**                                                                                   | **Type**                       | **Description**   |
-| ------------------------------------------------------------------------------------------ | ------------------------------ | ----------------- |
-| <code><a href="#cdktf.testingMatchers.AssertionReturn.property.message">message</a></code> | <code>java.lang.String</code>  | _No description._ |
-| <code><a href="#cdktf.testingMatchers.AssertionReturn.property.pass">pass</a></code>       | <code>java.lang.Boolean</code> | _No description._ |
+| **Name**                                                                                   | **Type**                       | **Description**                                                            |
+| ------------------------------------------------------------------------------------------ | ------------------------------ | -------------------------------------------------------------------------- |
+| <code><a href="#cdktf.testingMatchers.AssertionReturn.property.message">message</a></code> | <code>java.lang.String</code>  | - String message containing information about the result of the assertion. |
+| <code><a href="#cdktf.testingMatchers.AssertionReturn.property.pass">pass</a></code>       | <code>java.lang.Boolean</code> | - Boolean pass denoting the success of the assertion.                      |
 
 ---
 
@@ -26697,6 +26703,8 @@ public java.lang.String getMessage();
 
 - _Type:_ java.lang.String
 
+String message containing information about the result of the assertion.
+
 ---
 
 ##### `pass`<sup>Required</sup> <a name="pass" id="cdktf.testingMatchers.AssertionReturn.property.pass"></a>
@@ -26706,6 +26714,8 @@ public java.lang.Boolean getPass();
 ```
 
 - _Type:_ java.lang.Boolean
+
+Boolean pass denoting the success of the assertion.
 
 ---
 
@@ -32459,6 +32469,8 @@ new Testing();
 | <code><a href="#cdktf.Testing.toBeValidTerraform">toBeValidTerraform</a></code>                         | _No description._                                                                           |
 | <code><a href="#cdktf.Testing.toHaveDataSource">toHaveDataSource</a></code>                             | _No description._                                                                           |
 | <code><a href="#cdktf.Testing.toHaveDataSourceWithProperties">toHaveDataSourceWithProperties</a></code> | _No description._                                                                           |
+| <code><a href="#cdktf.Testing.toHaveProvider">toHaveProvider</a></code>                                 | _No description._                                                                           |
+| <code><a href="#cdktf.Testing.toHaveProviderWithProperties">toHaveProviderWithProperties</a></code>     | _No description._                                                                           |
 | <code><a href="#cdktf.Testing.toHaveResource">toHaveResource</a></code>                                 | _No description._                                                                           |
 | <code><a href="#cdktf.Testing.toHaveResourceWithProperties">toHaveResourceWithProperties</a></code>     | _No description._                                                                           |
 
@@ -32649,6 +32661,52 @@ Testing.toHaveDataSourceWithProperties(java.lang.String received, java.lang.Stri
 ---
 
 ###### `properties`<sup>Optional</sup> <a name="properties" id="cdktf.Testing.toHaveDataSourceWithProperties.parameter.properties"></a>
+
+- _Type:_ java.util.Map< java.lang.String, java.lang.Object >
+
+---
+
+##### `toHaveProvider` <a name="toHaveProvider" id="cdktf.Testing.toHaveProvider"></a>
+
+```java
+import com.hashicorp.cdktf.Testing;
+
+Testing.toHaveProvider(java.lang.String received, java.lang.String resourceType)
+```
+
+###### `received`<sup>Required</sup> <a name="received" id="cdktf.Testing.toHaveProvider.parameter.received"></a>
+
+- _Type:_ java.lang.String
+
+---
+
+###### `resourceType`<sup>Required</sup> <a name="resourceType" id="cdktf.Testing.toHaveProvider.parameter.resourceType"></a>
+
+- _Type:_ java.lang.String
+
+---
+
+##### `toHaveProviderWithProperties` <a name="toHaveProviderWithProperties" id="cdktf.Testing.toHaveProviderWithProperties"></a>
+
+```java
+import com.hashicorp.cdktf.Testing;
+
+Testing.toHaveProviderWithProperties(java.lang.String received, java.lang.String resourceType),Testing.toHaveProviderWithProperties(java.lang.String received, java.lang.String resourceType, java.util.Map< java.lang.String, java.lang.Object > properties)
+```
+
+###### `received`<sup>Required</sup> <a name="received" id="cdktf.Testing.toHaveProviderWithProperties.parameter.received"></a>
+
+- _Type:_ java.lang.String
+
+---
+
+###### `resourceType`<sup>Required</sup> <a name="resourceType" id="cdktf.Testing.toHaveProviderWithProperties.parameter.resourceType"></a>
+
+- _Type:_ java.lang.String
+
+---
+
+###### `properties`<sup>Optional</sup> <a name="properties" id="cdktf.Testing.toHaveProviderWithProperties.parameter.properties"></a>
 
 - _Type:_ java.util.Map< java.lang.String, java.lang.Object >
 
@@ -34096,6 +34154,7 @@ Resolve an inner object.
 | ------------------------------------------------------------------------------------------ | ------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | <code><a href="#cdktf.IResolveContext.property.preparing">preparing</a></code>             | <code>java.lang.Boolean</code>              | True when we are still preparing, false if we're rendering the final output.                                                                                                                                                       |
 | <code><a href="#cdktf.IResolveContext.property.scope">scope</a></code>                     | <code>software.constructs.IConstruct</code> | The scope from which resolution has been initiated.                                                                                                                                                                                |
+| <code><a href="#cdktf.IResolveContext.property.ignoreEscapes">ignoreEscapes</a></code>     | <code>java.lang.Boolean</code>              | True when ${} should not be parsed, and treated as literals.                                                                                                                                                                       |
 | <code><a href="#cdktf.IResolveContext.property.iteratorContext">iteratorContext</a></code> | <code>java.lang.String</code>               | TerraformIterators can be passed for block attributes and normal list attributes both require different handling when the iterable variable is accessed e.g. a dynamic block needs each.key while a for expression just needs key. |
 | <code><a href="#cdktf.IResolveContext.property.suppressBraces">suppressBraces</a></code>   | <code>java.lang.Boolean</code>              | True when ${} should be ommitted (because already inside them), false otherwise.                                                                                                                                                   |
 
@@ -34122,6 +34181,18 @@ public IConstruct getScope();
 - _Type:_ software.constructs.IConstruct
 
 The scope from which resolution has been initiated.
+
+---
+
+##### `ignoreEscapes`<sup>Optional</sup> <a name="ignoreEscapes" id="cdktf.IResolveContext.property.ignoreEscapes"></a>
+
+```java
+public java.lang.Boolean getIgnoreEscapes();
+```
+
+- _Type:_ java.lang.Boolean
+
+True when ${} should not be parsed, and treated as literals.
 
 ---
 
