--- a/website/docs/cdktf/api-reference/typescript.mdx
+++ b/website/docs/cdktf/api-reference/typescript.mdx
@@ -21869,6 +21869,8 @@ The list of aspects which were directly applied on this scope.
 
 ### AssertionReturn <a name="AssertionReturn" id="cdktf.testingMatchers.AssertionReturn"></a>
 
+Class representing the contents of a return by an assertion.
+
 #### Initializers <a name="Initializers" id="cdktf.testingMatchers.AssertionReturn.Initializer"></a>
 
 ```typescript
@@ -21877,10 +21879,10 @@ import { testingMatchers } from 'cdktf'
 new testingMatchers.AssertionReturn(message: string, pass: boolean)
 ```
 
-| **Name**                                                                                                | **Type**             | **Description**   |
-| ------------------------------------------------------------------------------------------------------- | -------------------- | ----------------- |
-| <code><a href="#cdktf.testingMatchers.AssertionReturn.Initializer.parameter.message">message</a></code> | <code>string</code>  | _No description._ |
-| <code><a href="#cdktf.testingMatchers.AssertionReturn.Initializer.parameter.pass">pass</a></code>       | <code>boolean</code> | _No description._ |
+| **Name**                                                                                                | **Type**             | **Description**                                                            |
+| ------------------------------------------------------------------------------------------------------- | -------------------- | -------------------------------------------------------------------------- |
+| <code><a href="#cdktf.testingMatchers.AssertionReturn.Initializer.parameter.message">message</a></code> | <code>string</code>  | - String message containing information about the result of the assertion. |
+| <code><a href="#cdktf.testingMatchers.AssertionReturn.Initializer.parameter.pass">pass</a></code>       | <code>boolean</code> | - Boolean pass denoting the success of the assertion.                      |
 
 ---
 
@@ -21888,20 +21890,24 @@ new testingMatchers.AssertionReturn(message: string, pass: boolean)
 
 - _Type:_ string
 
+String message containing information about the result of the assertion.
+
 ---
 
 ##### `pass`<sup>Required</sup> <a name="pass" id="cdktf.testingMatchers.AssertionReturn.Initializer.parameter.pass"></a>
 
 - _Type:_ boolean
 
+Boolean pass denoting the success of the assertion.
+
 ---
 
 #### Properties <a name="Properties" id="Properties"></a>
 
-| **Name**                                                                                   | **Type**             | **Description**   |
-| ------------------------------------------------------------------------------------------ | -------------------- | ----------------- |
-| <code><a href="#cdktf.testingMatchers.AssertionReturn.property.message">message</a></code> | <code>string</code>  | _No description._ |
-| <code><a href="#cdktf.testingMatchers.AssertionReturn.property.pass">pass</a></code>       | <code>boolean</code> | _No description._ |
+| **Name**                                                                                   | **Type**             | **Description**                                                            |
+| ------------------------------------------------------------------------------------------ | -------------------- | -------------------------------------------------------------------------- |
+| <code><a href="#cdktf.testingMatchers.AssertionReturn.property.message">message</a></code> | <code>string</code>  | - String message containing information about the result of the assertion. |
+| <code><a href="#cdktf.testingMatchers.AssertionReturn.property.pass">pass</a></code>       | <code>boolean</code> | - Boolean pass denoting the success of the assertion.                      |
 
 ---
 
@@ -21913,6 +21919,8 @@ public readonly message: string;
 
 - _Type:_ string
 
+String message containing information about the result of the assertion.
+
 ---
 
 ##### `pass`<sup>Required</sup> <a name="pass" id="cdktf.testingMatchers.AssertionReturn.property.pass"></a>
@@ -21922,6 +21930,8 @@ public readonly pass: boolean;
 ```
 
 - _Type:_ boolean
+
+Boolean pass denoting the success of the assertion.
 
 ---
 
@@ -27675,6 +27685,8 @@ new Testing();
 | <code><a href="#cdktf.Testing.toBeValidTerraform">toBeValidTerraform</a></code>                         | _No description._                                                                           |
 | <code><a href="#cdktf.Testing.toHaveDataSource">toHaveDataSource</a></code>                             | _No description._                                                                           |
 | <code><a href="#cdktf.Testing.toHaveDataSourceWithProperties">toHaveDataSourceWithProperties</a></code> | _No description._                                                                           |
+| <code><a href="#cdktf.Testing.toHaveProvider">toHaveProvider</a></code>                                 | _No description._                                                                           |
+| <code><a href="#cdktf.Testing.toHaveProviderWithProperties">toHaveProviderWithProperties</a></code>     | _No description._                                                                           |
 | <code><a href="#cdktf.Testing.toHaveResource">toHaveResource</a></code>                                 | _No description._                                                                           |
 | <code><a href="#cdktf.Testing.toHaveResourceWithProperties">toHaveResourceWithProperties</a></code>     | _No description._                                                                           |
 
@@ -27865,6 +27877,52 @@ Testing.toHaveDataSourceWithProperties(received: string, resourceType: string, p
 ---
 
 ###### `properties`<sup>Optional</sup> <a name="properties" id="cdktf.Testing.toHaveDataSourceWithProperties.parameter.properties"></a>
+
+- _Type:_ {[ key: string ]: any}
+
+---
+
+##### `toHaveProvider` <a name="toHaveProvider" id="cdktf.Testing.toHaveProvider"></a>
+
+```typescript
+import { Testing } from 'cdktf'
+
+Testing.toHaveProvider(received: string, resourceType: string)
+```
+
+###### `received`<sup>Required</sup> <a name="received" id="cdktf.Testing.toHaveProvider.parameter.received"></a>
+
+- _Type:_ string
+
+---
+
+###### `resourceType`<sup>Required</sup> <a name="resourceType" id="cdktf.Testing.toHaveProvider.parameter.resourceType"></a>
+
+- _Type:_ string
+
+---
+
+##### `toHaveProviderWithProperties` <a name="toHaveProviderWithProperties" id="cdktf.Testing.toHaveProviderWithProperties"></a>
+
+```typescript
+import { Testing } from 'cdktf'
+
+Testing.toHaveProviderWithProperties(received: string, resourceType: string, properties?: {[ key: string ]: any})
+```
+
+###### `received`<sup>Required</sup> <a name="received" id="cdktf.Testing.toHaveProviderWithProperties.parameter.received"></a>
+
+- _Type:_ string
+
+---
+
+###### `resourceType`<sup>Required</sup> <a name="resourceType" id="cdktf.Testing.toHaveProviderWithProperties.parameter.resourceType"></a>
+
+- _Type:_ string
+
+---
+
+###### `properties`<sup>Optional</sup> <a name="properties" id="cdktf.Testing.toHaveProviderWithProperties.parameter.properties"></a>
 
 - _Type:_ {[ key: string ]: any}
 
@@ -29312,6 +29370,7 @@ Resolve an inner object.
 | ------------------------------------------------------------------------------------------ | ---------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | <code><a href="#cdktf.IResolveContext.property.preparing">preparing</a></code>             | <code>boolean</code>               | True when we are still preparing, false if we're rendering the final output.                                                                                                                                                       |
 | <code><a href="#cdktf.IResolveContext.property.scope">scope</a></code>                     | <code>constructs.IConstruct</code> | The scope from which resolution has been initiated.                                                                                                                                                                                |
+| <code><a href="#cdktf.IResolveContext.property.ignoreEscapes">ignoreEscapes</a></code>     | <code>boolean</code>               | True when ${} should not be parsed, and treated as literals.                                                                                                                                                                       |
 | <code><a href="#cdktf.IResolveContext.property.iteratorContext">iteratorContext</a></code> | <code>string</code>                | TerraformIterators can be passed for block attributes and normal list attributes both require different handling when the iterable variable is accessed e.g. a dynamic block needs each.key while a for expression just needs key. |
 | <code><a href="#cdktf.IResolveContext.property.suppressBraces">suppressBraces</a></code>   | <code>boolean</code>               | True when ${} should be ommitted (because already inside them), false otherwise.                                                                                                                                                   |
 
@@ -29338,6 +29397,18 @@ public readonly scope: IConstruct;
 - _Type:_ constructs.IConstruct
 
 The scope from which resolution has been initiated.
+
+---
+
+##### `ignoreEscapes`<sup>Optional</sup> <a name="ignoreEscapes" id="cdktf.IResolveContext.property.ignoreEscapes"></a>
+
+```typescript
+public readonly ignoreEscapes: boolean;
+```
+
+- _Type:_ boolean
+
+True when ${} should not be parsed, and treated as literals.
 
 ---
 
