--- a/website/docs/cdktf/cli-reference/commands.mdx
+++ b/website/docs/cdktf/cli-reference/commands.mdx
@@ -21,6 +21,7 @@ The CDK for Terraform CLI has the following commands:
 - [output](/cdktf/cli-reference/commands#output)
 - [provider add](/cdktf/cli-reference/commands#provider-add)
 - [provider upgrade](/cdktf/cli-reference/commands#provider-upgrade)
+- [provider list](/cdktf/cli-reference/commands#provider-list)
 - [synth](/cdktf/cli-reference/commands#synth)
 - [watch](/cdktf/cli-reference/commands#watch)
 
@@ -690,7 +691,28 @@ This command lets you upgrade Terraform providers in a CDKTF project to the newe
 If your project has the associated [pre-built provider](/cdktf/concepts/providers#install-pre-built-providers) already installed, CDKTF updates the pre-built provider. Otherwise, CDKTF adds the provider to the `cdktf.json` configuration file and invokes `cdktf get` to generate [local provider bindings](/cdktf/concepts/providers#add-provider-to-cdktf-json).
 
 ```sh
-$ cdktf provider add --help
+$ cdktf provider upgrade --help
+```
+
+## provider list
+
+This command prints out a table (or json with the `--json` option) containing details about the providers installed for the project. It gathers information for both locally built and pre-built providers.
+
+Information printed varies between locally generated and prebuilt providers. The information for each provider includes the Terraform provider version, the CDKTF version, and the package name and version (if pre-built provider).
+
+```sh
+$ cdktf provider list --help
+cdktf provider list [flags]
+
+List installed providers
+
+Options:
+      --version                   Show version number                                                                                  [boolean]
+      --disable-plugin-cache-env  Dont set TF_PLUGIN_CACHE_DIR automatically. This is useful when the plugin cache is configured differently.
+                                  Supported using the env CDKTF_DISABLE_PLUGIN_CACHE_ENV.                             [boolean] [default: false]
+      --log-level                 Which log level should be written. Only supported via setting the env CDKTF_LOG_LEVEL                 [string]
+      --json                      get providers list as json                                                          [boolean] [default: false]
+  -h, --help                      Show help                                                                                            [boolean]
 ```
 
 **Help Output**
